[package]
name = "cslt"
version = "0.1.0"
edition = "2021"
authors = ["CRT-HAO"]
repository = "https://github.com/NTUST-Hack/cslt"


[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
async-trait = "0.1.77"
cookie_store = "0.20.0"
regex = "1.10.3"
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"] }
reqwest_cookie_store = "0.6.0"
scraper = "0.18.1"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.1"
tokio = { version = "1", features = ["full"] }
url = "2.5.0"
